[package]
name = "xrandr_conditional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = "1.0"
serde_derive = "1.0"
regex = "1"
clap = { version = "3.2.6", features = ["derive"] }